--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.ssn.skillindia"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -40,8 +40,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 
+    compile 'com.jakewharton:butterknife:5.1.1'
     compile('com.mikepenz:materialdrawer:5.8.1@aar') {
         transitive = true
     }
