--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:cardview-v7:25.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:cardview-v7:25.3.0'
 
-    compile 'com.jakewharton:butterknife:5.1.1'
-    compile('com.mikepenz:materialdrawer:5.8.1@aar') {
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    compile('com.mikepenz:materialdrawer:5.8.2@aar') {
         transitive = true
     }
 }
