--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,21 +27,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity" />
-
-        <activity
-            android:name=".RegisterActivity"
-            android:theme="@style/Translucent" />
-
-        <activity android:name=".LoginSuccessActivity" />
-
-        <activity android:name=".SearchTrainingCenterActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/Translucent" />
+
+        <activity android:name=".SearchTrainingCenterActivity" />
     </application>
 
 </manifest>
