--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -47,8 +49,10 @@ dependencies {
     }
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
+    compile 'com.android.support:multidex:1.0.1'
 
-    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
+    compile 'com.google.firebase:firebase-database:10.2.0'
 
     compile 'com.firebaseui:firebase-ui-auth:1.2.0'
 
@@ -58,6 +62,8 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
         transitive = true;
     }
+
+    compile 'com.github.paolorotolo:appintro:4.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
