:sparkles: Add SwitchActivity

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.fabric.io/public' }
+        maven {
+            url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+        }
     }
 }
 
