--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     }
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
+    compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:multidex:1.0.1'
 
     compile 'com.google.firebase:firebase-auth:10.2.0'
@@ -64,6 +65,9 @@ dependencies {
     }
 
     compile 'com.github.paolorotolo:appintro:4.1.0'
+
+    compile 'com.facebook.stetho:stetho:1.4.2'
+    compile 'com.uphyca:stetho_realm:2.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
