--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,12 +32,6 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activities.IntroActivity"
-            android:theme="@style/SplashTheme" />
-
-        <activity android:name=".activities.MainActivity" />
-
-        <activity
             android:name=".activities.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/SplashTheme">
@@ -49,16 +43,21 @@
         </activity>
 
         <activity
-            android:name=".activities.HelloActivity"
+            android:name=".activities.IntroActivity"
             android:theme="@style/SplashTheme" />
 
-        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".activities.HelloActivity"
+            android:theme="@style/HelloTheme" />
+
+        <activity android:name=".activities.MainActivity" />
 
         <activity
-            android:name=".RegisterActivity"
-            android:theme="@style/Translucent" />
+            android:name=".activities.SwitchActivity"
+            android:label="@string/title_activity_switch"
+            android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".SearchTrainingCenterActivity" />
+        <activity android:name=".activities.SearchTrainingCenterActivity" />
 
         <meta-data
             android:name="io.fabric.ApiKey"
