--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile('com.mikepenz:materialdrawer:5.8.2@aar') {
-        transitive = true
-    }
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.android.support:design:25.3.0'
@@ -63,6 +60,11 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     compile 'com.github.paolorotolo:appintro:4.1.0'
+    compile 'com.mikepenz:fontawesome-typeface:4.6.0.3@aar'
+    compile('com.mikepenz:materialdrawer:5.8.2@aar') {
+        transitive = true
+    }
+
 
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.uphyca:stetho_realm:2.0.0'
