--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.8.2@aar') {
         transitive = true
     }
+    compile 'com.github.vipulasri:timelineview:1.0.5'
 
 
     compile 'com.facebook.stetho:stetho:1.4.2'
