--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,12 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:multidex:1.0.1'
 
-    compile 'com.google.firebase:firebase-auth:10.2.0'
-    compile 'com.google.firebase:firebase-core:10.2.0'
-    compile 'com.google.firebase:firebase-database:10.2.0'
-    compile 'com.google.firebase:firebase-messaging:10.2.0'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+
+    compile 'com.google.firebase:firebase-auth:10.2.1'
+    compile 'com.google.firebase:firebase-core:10.2.1'
+    compile 'com.google.firebase:firebase-database:10.2.1'
+    compile 'com.google.firebase:firebase-messaging:10.2.1'
 
     compile 'com.firebaseui:firebase-ui-auth:1.2.0'
 
@@ -68,7 +70,6 @@ dependencies {
     }
     compile 'me.drakeet.multitype:multitype:2.4.1'
     compile 'com.github.vipulasri:timelineview:1.0.5'
-
 
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.uphyca:stetho_realm:2.0.0'
