--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,8 @@
             android:name=".activities.TrainingCenterDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity android:name=".activities.MapActivity" />
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="327685d013652e58a2cb3571746ced9f0a54aab3"
@@ -81,5 +83,9 @@
             android:resource="@color/colorPrimary" />
 
         <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
     </application>
 </manifest>
