--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,9 +80,7 @@ dependencies {
     compile('io.fabric.sdk.android:fabric:1.3.10@aar') {
         transitive = true;
     }
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.2@aar') {
-        transitive = true;
-    }
+    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.2@aar') { transitive = true; }
 }
 
 apply plugin: 'com.google.gms.google-services'
