--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
         applicationId "com.ssn.skillindia"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
@@ -63,6 +63,8 @@ dependencies {
 
     //compile 'com.algolia:algoliasearch-android:3.5'
     compile 'com.github.paolorotolo:appintro:4.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.yarolegovich:discrete-scrollview:1.1.2'
     compile 'com.mikepenz:google-material-typeface:3.0.1.0.original@aar'
     compile 'com.mikepenz:fontawesome-typeface:4.6.0.3@aar'
     compile('com.mikepenz:materialdrawer:5.8.2@aar') {
