--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
-    //compile 'com.algolia:algoliasearch-android:3.5'
+    compile 'com.github.alamkanak:android-week-view:1.2.6'
     compile 'com.github.paolorotolo:appintro:4.1.0'
     compile 'com.roughike:bottom-bar:2.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -82,7 +82,6 @@ dependencies {
     compile('io.fabric.sdk.android:fabric:1.3.10@aar') {
         transitive = true;
     }
-    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.2@aar') { transitive = true; }
 }
 
 apply plugin: 'com.google.gms.google-services'
