--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:name=".activities.HelloActivity"
             android:theme="@style/HelloTheme" />
 
+        <activity android:name=".activities.DashboardActivity" />
+
+        <activity android:name=".activities.CsrActivity" />
+
         <activity android:name=".activities.MainActivity" />
 
         <activity
