--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
         transitive = true
     }
     compile 'me.drakeet.multitype:multitype:2.4.1'
+    compile 'com.github.zagum:Android-SwitchIcon:1.3.4'
     compile 'com.github.vipulasri:timelineview:1.0.5'
 
     compile 'com.facebook.stetho:stetho:1.4.2'
