--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
             android:name=".activities.IntroActivity"
             android:theme="@style/SplashTheme" />
 
+        <activity android:name=".fragments.learner.AnimalHusbandry" />
+
         <activity
             android:name=".activities.HelloActivity"
             android:theme="@style/HelloTheme" />
