--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
         applicationId "com.ssn.skillindia"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 8
-        versionName "1.7o"
+        versionCode 10
+        versionName "1.9"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
