--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     }
     compile 'com.github.iammert:MaterialIntroView:1.6.0'
     compile 'me.drakeet.multitype:multitype:2.4.1'
+    compile 'com.github.thorbenprimke:realm-searchview:0.9.6'
     compile 'com.github.zagum:Android-SwitchIcon:1.3.4'
     compile 'com.github.vipulasri:timelineview:1.0.5'
 
