--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,8 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.TransNav" />
 
+        <activity android:name=".activities.RealmSearchActivity" />
+
         <activity
             android:name=".activities.TrainingCenterDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
