--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
 
     <application
         android:name=".SkillIndiaApplication"
@@ -55,7 +56,7 @@
 
         <activity android:name=".activities.DashboardActivity" />
 
-        <activity android:name=".activities.CsrActivity" />
+        <activity android:name=".activities.AadhaarActivity" />
 
         <activity android:name=".activities.MainActivity" />
 
